# some-old

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  Makefile  README.md
.github/workflows/: release.yml
source/: app.c  commands.c  document.c  ink.h  inkless.h  layout.c  main.c  terminal.c  utils.c  view.c
src/: main.rs  tests_io.rs
src/app/: event_loop.rs  lifecycle.rs  mod.rs  types.rs
src/commands/: cmd_nav.rs  cmd_search.rs  cmd_sys.rs  cmd_utils.rs  dispatch.rs  mod.rs  nav.rs  search.rs  sys.rs  utils.rs
src/document/: io.rs  mod.rs  state.rs  types.rs
src/errors/: mod.rs  types.rs
src/input/: keys.rs  mod.rs  reader.rs
src/layout/: compute.rs  mod.rs  state.rs  types.rs
src/terminal/: guard.rs  mod.rs  utils.rs
src/utils/: mod.rs  search.rs
src/view/: mod.rs  prompt.rs  render.rs
