[package]
name = "inkless"
version = "0.1.1"
edition = "2024"
authors = ["Nolan Stark"]
description = "A minimalist terminal pager featuring reactive layout management, automated word-wrapping, and regular expression search."
license = "MIT"
repository = "https://github.com/sapirrior/inkless"
readme = "README.md"
keywords = ["pager", "terminal", "cli", "text-viewer"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
regex = "1.12.3"

[[bin]]
name = "inkl"
path = "src/main.rs"
